# MDT

./: ApplicationSettings.json  CMakeLists.txt  h264_server_decoder.py  main.cpp  vcpkg.json
CameraCalibration/: CameraCalib.py
Controllers/: CameraController.cpp  CameraController.hpp  DroneController.cpp  DroneController.hpp  NavigationController.cpp  NavigationController.hpp
Detection/: inference.cpp  inference.h
Navigation/: NavigationController.cpp  NavigationController.hpp
Tracking/: CMT.cpp  CMT.h  Consensus.cpp  Fusion.cpp  Matcher.cpp  Tracker.cpp  common.h
Utils/: SocketClient.cpp  SocketClient.hpp
